# common-pydantic-model

./: README.md  pyproject.toml
drones_comms_model/: __init__.py  c2d_commands.py  common_types.py  d2c_acknowledgements.py
src/drone_comms_model/: c2d_commands.py
src/drones_comms_model/: __init__.py  common_types.py  d2c_acknowledgements.py
