[tool.poetry]
name = "drones-comms-model"
version = "0.1.0"       
description = "Created version mamangement for the drone-comms-models"
authors = ["Ahsan Ellahi <ahsan170524@gmail.com>"]
readme = "README.md"
package-mode = false
packages = [{ include = "drones_comms_model", from = "src/*" }]

# This section holds the project's dependencies
[tool.poetry.dependencies]
python = ">=3.12"
pydantic = ">=2.11.5,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"